수강편람 업데이트 (2012-2)

--- a/data/htm/2012_2_basics_foreign.htm
+++ b/data/htm/2012_2_basics_foreign.htm
@@ -3039,6 +3039,19 @@
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.023B&nbsp;</td>
+<td class="pstyle2">001&nbsp;</td>
+<td class="pstyle2">초급프랑스어 1&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">목&nbsp;10,10&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">007-111A&nbsp;</td>
+<td class="pstyle2">강초롱&nbsp;</td>
+<td class="pstyle2">20&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.023B&nbsp;</td>
 <td class="pstyle2">002&nbsp;</td>
 <td class="pstyle2">초급프랑스어 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
@@ -3056,7 +3069,7 @@
 <td class="pstyle2">초급프랑스어 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">수&nbsp;4.5-1.5&nbsp;</td>
+<td class="pstyle2">수&nbsp;4.5-1.5,8,8&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-104&nbsp;</td>
 <td class="pstyle2">유치정&nbsp;</td>
@@ -3082,9 +3095,9 @@
 <td class="pstyle2">초급프랑스어 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">수&nbsp;6-1.5&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">014-112B&nbsp;</td>
+<td class="pstyle2">수&nbsp;9,6-1.5,9&nbsp;</td>
+<td class="pstyle2">실험반2&nbsp;</td>
+<td class="pstyle2">005-206&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -3108,9 +3121,9 @@
 <td class="pstyle2">초급프랑스어 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">수&nbsp;7.5-1.5&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">014-112B&nbsp;</td>
+<td class="pstyle2">수&nbsp;10,7.5-1.5,10&nbsp;</td>
+<td class="pstyle2">실험반2&nbsp;</td>
+<td class="pstyle2">005-206&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -3143,6 +3156,19 @@
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.023B&nbsp;</td>
+<td class="pstyle2">005&nbsp;</td>
+<td class="pstyle2">초급프랑스어 1&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">금&nbsp;1,1&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">007-111A&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">20&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.023B&nbsp;</td>
 <td class="pstyle2">006&nbsp;</td>
 <td class="pstyle2">초급프랑스어 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
@@ -3163,6 +3189,19 @@
 <td class="pstyle2">목&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-108&nbsp;</td>
+<td class="pstyle2">이규현&nbsp;</td>
+<td class="pstyle2">20&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.023B&nbsp;</td>
+<td class="pstyle2">006&nbsp;</td>
+<td class="pstyle2">초급프랑스어 1&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">금&nbsp;2,2&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">007-111A&nbsp;</td>
 <td class="pstyle2">이규현&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -3195,6 +3234,19 @@
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.023B&nbsp;</td>
+<td class="pstyle2">007&nbsp;</td>
+<td class="pstyle2">초급프랑스어 1&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">금&nbsp;3,3&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">007-111A&nbsp;</td>
+<td class="pstyle2">정우향&nbsp;</td>
+<td class="pstyle2">20&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.023B&nbsp;</td>
 <td class="pstyle2">008&nbsp;</td>
 <td class="pstyle2">초급프랑스어 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
@@ -3221,6 +3273,19 @@
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.023B&nbsp;</td>
+<td class="pstyle2">008&nbsp;</td>
+<td class="pstyle2">초급프랑스어 1&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">금&nbsp;4,4&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">007-111A&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">20&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.023B&nbsp;</td>
 <td class="pstyle2">009&nbsp;</td>
 <td class="pstyle2">초급프랑스어 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
@@ -3241,6 +3306,19 @@
 <td class="pstyle2">수&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">006-106&nbsp;</td>
+<td class="pstyle2">신은영&nbsp;</td>
+<td class="pstyle2">20&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.023B&nbsp;</td>
+<td class="pstyle2">009&nbsp;</td>
+<td class="pstyle2">초급프랑스어 1&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">금&nbsp;6,6&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">007-111A&nbsp;</td>
 <td class="pstyle2">신은영&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -3267,6 +3345,19 @@
 <td class="pstyle2">수&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-106&nbsp;</td>
+<td class="pstyle2">최애영&nbsp;</td>
+<td class="pstyle2">20&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.024B&nbsp;</td>
+<td class="pstyle2">001&nbsp;</td>
+<td class="pstyle2">초급프랑스어 2&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">목&nbsp;7,7&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">007-111A&nbsp;</td>
 <td class="pstyle2">최애영&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -3299,6 +3390,19 @@
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.024B&nbsp;</td>
+<td class="pstyle2">002&nbsp;</td>
+<td class="pstyle2">초급프랑스어 2&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">금&nbsp;7,7&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">007-111A&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">20&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.024B&nbsp;</td>
 <td class="pstyle2">003&nbsp;</td>
 <td class="pstyle2">초급프랑스어 2&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
@@ -3319,6 +3423,19 @@
 <td class="pstyle2">수&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-106&nbsp;</td>
+<td class="pstyle2">나윤희&nbsp;</td>
+<td class="pstyle2">20&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.024B&nbsp;</td>
+<td class="pstyle2">003&nbsp;</td>
+<td class="pstyle2">초급프랑스어 2&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">목&nbsp;8,8&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">007-111A&nbsp;</td>
 <td class="pstyle2">나윤희&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -3351,6 +3468,19 @@
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.024B&nbsp;</td>
+<td class="pstyle2">004&nbsp;</td>
+<td class="pstyle2">초급프랑스어 2&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">금&nbsp;8,8&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">007-111A&nbsp;</td>
+<td class="pstyle2">정예영&nbsp;</td>
+<td class="pstyle2">20&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.024B&nbsp;</td>
 <td class="pstyle2">005&nbsp;</td>
 <td class="pstyle2">초급프랑스어 2&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
@@ -3368,9 +3498,9 @@
 <td class="pstyle2">초급프랑스어 2&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">목&nbsp;7.5-1.5&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">014-101B&nbsp;</td>
+<td class="pstyle2">목&nbsp;9,9,7.5-1.5&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">007-111A&nbsp;</td>
 <td class="pstyle2">심재중&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -6016,6 +6146,19 @@
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.095&nbsp;</td>
+<td class="pstyle2">001&nbsp;</td>
+<td class="pstyle2">중급프랑스어 1&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">금&nbsp;2&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">005-206&nbsp;</td>
+<td class="pstyle2">정희경&nbsp;</td>
+<td class="pstyle2">20&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.095&nbsp;</td>
 <td class="pstyle2">002&nbsp;</td>
 <td class="pstyle2">중급프랑스어 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
@@ -6036,6 +6179,19 @@
 <td class="pstyle2">목&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">002-110&nbsp;</td>
+<td class="pstyle2">전선형&nbsp;</td>
+<td class="pstyle2">20&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.095&nbsp;</td>
+<td class="pstyle2">002&nbsp;</td>
+<td class="pstyle2">중급프랑스어 1&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">금&nbsp;4&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">005-206&nbsp;</td>
 <td class="pstyle2">전선형&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -6062,6 +6218,19 @@
 <td class="pstyle2">수&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">007-111A&nbsp;</td>
+<td class="pstyle2">유호식&nbsp;</td>
+<td class="pstyle2">20&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.096&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">중급프랑스어 2&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">금&nbsp;3&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">005-206&nbsp;</td>
 <td class="pstyle2">유호식&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -6231,7 +6400,7 @@
 <td class="pstyle2">화&nbsp;6-1.5,10,10&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-104&nbsp;</td>
-<td class="pstyle2">임호준&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -6244,7 +6413,7 @@
 <td class="pstyle2">목&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-104&nbsp;</td>
-<td class="pstyle2">임호준&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -6283,7 +6452,7 @@
 <td class="pstyle2">화&nbsp;9,9,6-1.5&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">005-211&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">임호준&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -6296,7 +6465,7 @@
 <td class="pstyle2">목&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">008-304&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">임호준&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
