--- a/data/htm/2012_2_basics_korean.htm
+++ b/data/htm/2012_2_basics_korean.htm
@@ -680,7 +680,7 @@
 <td class="pstyle2">화&nbsp;7.5,8.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-403&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">신필여&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -693,7 +693,7 @@
 <td class="pstyle2">목&nbsp;7.5,8.5&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">43-1-403&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">신필여&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -706,7 +706,7 @@
 <td class="pstyle2">화&nbsp;7.5,8.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">020-116&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">장경현&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -719,7 +719,7 @@
 <td class="pstyle2">목&nbsp;7.5,8.5&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">020-116&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">장경현&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -732,7 +732,7 @@
 <td class="pstyle2">월&nbsp;3,4&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">500-L303&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">문숙영&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -745,7 +745,7 @@
 <td class="pstyle2">수&nbsp;3,4&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">500-L303&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">문숙영&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -758,7 +758,7 @@
 <td class="pstyle2">월&nbsp;3,4&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">500-L304&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">장경현&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -771,7 +771,7 @@
 <td class="pstyle2">수&nbsp;3,4&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">500-L304&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">장경현&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -784,7 +784,7 @@
 <td class="pstyle2">월&nbsp;3,4&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">500-L305&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">임재욱&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -797,7 +797,7 @@
 <td class="pstyle2">수&nbsp;3,4&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">500-L305&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">임재욱&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -810,7 +810,7 @@
 <td class="pstyle2">월&nbsp;3,4&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">500-L308&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">조성진&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -823,7 +823,7 @@
 <td class="pstyle2">수&nbsp;3,4&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">500-L308&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">조성진&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -836,7 +836,7 @@
 <td class="pstyle2">월&nbsp;3,4&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">500-L309&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">서진영&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -849,7 +849,7 @@
 <td class="pstyle2">수&nbsp;3,4&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">500-L309&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">서진영&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -862,7 +862,7 @@
 <td class="pstyle2">월&nbsp;3,4&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">500-L310&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이수정&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -875,7 +875,7 @@
 <td class="pstyle2">수&nbsp;3,4&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">500-L310&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이수정&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -888,7 +888,7 @@
 <td class="pstyle2">월&nbsp;3,4&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">018-601&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">정주아&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -901,7 +901,7 @@
 <td class="pstyle2">수&nbsp;3,4&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">018-601&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">정주아&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -914,7 +914,7 @@
 <td class="pstyle2">화&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">500-L303&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">서정민&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -927,7 +927,7 @@
 <td class="pstyle2">목&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">500-L303&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">서정민&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -940,7 +940,7 @@
 <td class="pstyle2">화&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">500-L304&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">안순태&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -953,7 +953,7 @@
 <td class="pstyle2">목&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">500-L304&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">안순태&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -966,7 +966,7 @@
 <td class="pstyle2">화&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">500-L305&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김승민&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -979,7 +979,7 @@
 <td class="pstyle2">목&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">500-L305&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김승민&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -992,7 +992,7 @@
 <td class="pstyle2">화&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">500-L308&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">장두영&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1005,7 +1005,7 @@
 <td class="pstyle2">목&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">500-L308&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">장두영&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1018,7 +1018,7 @@
 <td class="pstyle2">화&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">500-L309&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이형진&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1031,7 +1031,7 @@
 <td class="pstyle2">목&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">500-L309&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이형진&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1044,7 +1044,7 @@
 <td class="pstyle2">화&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">500-L310&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">안용희&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1057,7 +1057,7 @@
 <td class="pstyle2">목&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">500-L310&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">안용희&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1070,7 +1070,7 @@
 <td class="pstyle2">월&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-207&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">조성진&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1083,7 +1083,7 @@
 <td class="pstyle2">수&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">001-207&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">조성진&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1096,7 +1096,7 @@
 <td class="pstyle2">월&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-209&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">서진영&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1109,7 +1109,7 @@
 <td class="pstyle2">수&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">001-209&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">서진영&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1122,7 +1122,7 @@
 <td class="pstyle2">월&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-210&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">안순태&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1135,7 +1135,7 @@
 <td class="pstyle2">수&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">001-210&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">안순태&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1148,7 +1148,7 @@
 <td class="pstyle2">월&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">002-106&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김승민&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1161,7 +1161,7 @@
 <td class="pstyle2">수&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">002-106&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김승민&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1174,7 +1174,7 @@
 <td class="pstyle2">월&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">002-110&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">조연정&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1187,7 +1187,7 @@
 <td class="pstyle2">수&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">002-110&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">조연정&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1200,7 +1200,7 @@
 <td class="pstyle2">월&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-103&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">장두영&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1213,7 +1213,7 @@
 <td class="pstyle2">수&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">003-103&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">장두영&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1226,7 +1226,7 @@
 <td class="pstyle2">월&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-104&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이성희&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1239,7 +1239,7 @@
 <td class="pstyle2">수&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">003-104&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이성희&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1252,7 +1252,7 @@
 <td class="pstyle2">월&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-106&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">장성규&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1265,7 +1265,7 @@
 <td class="pstyle2">수&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">003-106&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">장성규&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1278,7 +1278,7 @@
 <td class="pstyle2">월&nbsp;7,8&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-207&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">임재욱&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1291,7 +1291,7 @@
 <td class="pstyle2">수&nbsp;7,8&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">001-207&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">임재욱&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1304,7 +1304,7 @@
 <td class="pstyle2">월&nbsp;7,8&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-209&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김선효&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1317,7 +1317,7 @@
 <td class="pstyle2">수&nbsp;7,8&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">001-209&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김선효&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1330,7 +1330,7 @@
 <td class="pstyle2">월&nbsp;7,8&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-210&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이현희&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1341,9 +1341,9 @@
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-2-2&nbsp;</td>
 <td class="pstyle2">수&nbsp;7,8&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">001-210&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이현희&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1356,7 +1356,7 @@
 <td class="pstyle2">화&nbsp;7.5,8.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-207&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">정병설&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1369,7 +1369,7 @@
 <td class="pstyle2">목&nbsp;7.5,8.5&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">001-207&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">정병설&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1382,7 +1382,7 @@
 <td class="pstyle2">화&nbsp;7.5,8.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-209&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김선효&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1395,7 +1395,7 @@
 <td class="pstyle2">목&nbsp;7.5,8.5&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">001-209&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김선효&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1405,10 +1405,10 @@
 <td class="pstyle2">대학국어&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-2-2&nbsp;</td>
-<td class="pstyle2">화&nbsp;7.5,8.5&nbsp;</td>
+<td class="pstyle2">월&nbsp;7,8&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">014-120&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">008-405&nbsp;</td>
+<td class="pstyle2">이상욱&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1418,10 +1418,10 @@
 <td class="pstyle2">대학국어&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-2-2&nbsp;</td>
-<td class="pstyle2">목&nbsp;7.5,8.5&nbsp;</td>
+<td class="pstyle2">수&nbsp;7,8&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
-<td class="pstyle2">014-120&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">008-405&nbsp;</td>
+<td class="pstyle2">이상욱&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1434,7 +1434,7 @@
 <td class="pstyle2">월&nbsp;3,4&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">014-212B&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김선효&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1447,7 +1447,7 @@
 <td class="pstyle2">수&nbsp;3,4&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">014-212B&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김선효&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
