--- a/data/htm/2012_2_normal_special.htm
+++ b/data/htm/2012_2_normal_special.htm
@@ -1262,9 +1262,9 @@
 <td class="pstyle2">신체활동의 이해와 실습&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">2-1-2&nbsp;</td>
-<td class="pstyle2">수&nbsp;7,8,6&nbsp;</td>
+<td class="pstyle2">화&nbsp;6,7,5&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
-<td class="pstyle2">071-301&nbsp;</td>
+<td class="pstyle2">071-403&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1277,7 +1277,7 @@
 <td class="pstyle2">2-1-2&nbsp;</td>
 <td class="pstyle2">금&nbsp;6,7,5&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
-<td class="pstyle2">071-403&nbsp;</td>
+<td class="pstyle2">071-302&nbsp;</td>
 <td class="pstyle2">나영일&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1288,7 +1288,7 @@
 <td class="pstyle2">산과 인생&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">2-1-2&nbsp;</td>
-<td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">금&nbsp;5,6,7&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">071-403&nbsp;</td>
 <td class="pstyle2">나영일&nbsp;</td>
