--- a/data/htm/2012_2_normal_society.htm
+++ b/data/htm/2012_2_normal_society.htm
@@ -53,9 +53,9 @@
 <td class="pstyle2">정치학개론&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">금&nbsp;4.5,5.5,6.5&nbsp;</td>
+<td class="pstyle2">금&nbsp;6,7,8&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">016-104&nbsp;</td>
+<td class="pstyle2">016-106&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -66,9 +66,9 @@
 <td class="pstyle2">정치학개론&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">수&nbsp;1.5,2.5,3.5&nbsp;</td>
+<td class="pstyle2">화&nbsp;1.5,2.5,3.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">016-107&nbsp;</td>
+<td class="pstyle2">016-216&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
